--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ add_executable (knapsack main/Main.cpp main/KnapSack.h main/KnapSack.cpp util/Ge
 add_executable (readerTest  test/readerTest.cpp main/KnapSack.h main/KnapSack.cpp io/KnapSackReader.h io/KnapSackReader.cpp util/MyMath.cpp util/MyMath.h)
 add_test (NAME readerTest COMMAND readerTest)
 
-add_executable (writerTest  test/writerTest.cpp main/KnapSack.h main/KnapSack.cpp io/KnapSackReader.h io/KnapSackReader.cpp util/MyMath.cpp util/MyMath.h)
+add_executable (writerTest  test/writerTest.cpp main/KnapSack.h main/KnapSack.cpp io/KnapSackWriter.h io/KnapSackWriter.cpp util/MyMath.cpp util/MyMath.h)
 add_test (NAME writerTest COMMAND writerTest)
 
-add_executable (knapsackTest  test/knapsackTest.cpp main/KnapSack.h main/KnapSack.cpp io/KnapSackReader.h io/KnapSackReader.cpp util/MyMath.cpp util/MyMath.h)
-add_test (NAME knapsackTest COMMAND knapsackTest)
+# add_executable (knapsackTest  test/knapsackTest.cpp main/KnapSack.h main/KnapSack.cpp io/KnapSackReader.h io/KnapSackReader.cpp util/MyMath.cpp util/MyMath.h)
+# add_test (NAME knapsackTest COMMAND knapsackTest)
