Added include_dir and moved io into util
@phineliner FYI

By using the include dir we can include headers by "package path". So we
don't need to care about where the file is located to the current file, we
can just include the file via package path

E.g.
So before we had to: #include "../util/io/x.h

Now we can use in every file (!) the package path: #include "util/io/x.h"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@
 cmake_minimum_required (VERSION 3.0)
 project (Knapsack)
 
+include_directories ("${PROJECT_SOURCE_DIR}")
+
 # Optionen für Doxygen
 include(CMakeDoxygen.txt)
 
@@ -47,7 +49,7 @@ endif(NOT APPLE)
 
 # ------------------------------------------------------------------
 # Ausführbare Programme
-add_library (knapsack main/KnapSack.h main/KnapSack.cpp util/GetWalltime.h util/GetWalltime.cpp io/KnapSackReader.h io/KnapSackReader.cpp io/KnapSackWriter.h io/KnapSackWriter.cpp util/StringUtils.h util/StringUtils.cpp util/MyMath.cpp util/MyMath.h)
+add_library (knapsack main/KnapSack.h main/KnapSack.cpp util/GetWalltime.h util/GetWalltime.cpp util/io/KnapSackReader.h util/io/KnapSackReader.cpp util/io/KnapSackWriter.h util/io/KnapSackWriter.cpp util/StringUtils.h util/StringUtils.cpp util/MyMath.cpp util/MyMath.h)
 
 add_executable (knapsackStarter main/Main.cpp)
 target_link_libraries (knapsackStarter knapsack)
