using statisticswriter to write solver statistics to file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ add_library (knapsack
 	util/GetWalltime.h util/GetWalltime.cpp
 	util/io/KnapSackReader.h util/io/KnapSackReader.cpp
 	util/io/KnapSackWriter.h util/io/KnapSackWriter.cpp
+	util/io/StatisticsWriter.h util/io/StatisticsWriter.cpp
 	util/StringUtils.h util/StringUtils.cpp
 	util/MyMath.h util/MyMath.cpp
 )
